CXP_GCS_DiagnosticTroubleInfo_API

--- a/force-app/main/default/classes/CXP_GCS_DiagnosticTroubleInfo_API.cls
+++ b/force-app/main/default/classes/CXP_GCS_DiagnosticTroubleInfo_API.cls
@@ -13,8 +13,8 @@ global with sharing class CXP_GCS_DiagnosticTroubleInfo_API {
         
 
         Map<String, Diagnostic_Trouble_Info__c> diagnosticTroubleInfoMap = new Map<String, Diagnostic_Trouble_Info__c>();
+        Diagnostic_Trouble_Info__c diagnosticTroubleInfo = new Diagnostic_Trouble_Info__c();
         for (CXP_GCS_DiagnosticTroubleInfo_APIWrapper.T_DATA bodyItem : bodyWrapper.request.payload.T_DATA) {
-            Diagnostic_Trouble_Info__c diagnosticTroubleInfo = new Diagnostic_Trouble_Info__c();
             if (String.isBlank(bodyItem.VIN)) {
                 populateResponseErrorMessage(responseInstance, 'E', ' ', 'VIN value is empty');
                 break;
@@ -29,23 +29,23 @@ global with sharing class CXP_GCS_DiagnosticTroubleInfo_API {
             }
             diagnosticTroubleInfo.Is_Activity_Diagnostics__c = Boolean.valueOf(bodyItem.ACVT_DTC_YN);
             diagnosticTroubleInfo.Fuel_Kind_Code__c = bodyItem.FUEL_K_CD;
-         //   diagnosticTroubleInfo.Occurrence_Datetime__c = Datetime.valueOf(bodyItem.DGN_OCCU_YMD + bodyItem.DGN_OCCU_CTMS);
+            String dtme = bodyItem.DGN_OCCU_YMD  + bodyItem.DGN_OCCU_CTMS;
+            Datetime dt = Datetime.newInstance(Integer.valueOf(dtme.substring(0,4)), Integer.valueOf(dtme.substring(4,6)), Integer.valueOf(dtme.substring(6,8)), Integer.valueOf(dtme.substring(8,10)), Integer.valueOf(dtme.substring(10,12)), Integer.valueOf(dtme.substring(12,14)));
+            diagnosticTroubleInfo.Occurrence_Datetime__c = Datetime.valueOf(dt);
             diagnosticTroubleInfo.Description__c = bodyItem.ET_BKDW_EXPL;
             diagnosticTroubleInfo.External_Key__c = bodyItem.VIN + bodyItem.DGN_DTL_SEQ;
             diagnosticTroubleInfoMap.put(diagnosticTroubleInfo.VIN__c, diagnosticTroubleInfo);
         }
-
-
-        List<Asset> assetIdList = [SELECT Id, VIN__c FROM Asset WHERE VIN__c IN :diagnosticTroubleInfoMap.keySet()];
-        for (Asset assetId : assetIdList) {
-            Diagnostic_Trouble_Info__c diagnosticTroubleInfo = new Diagnostic_Trouble_Info__c();
-            diagnosticTroubleInfo.Vehicle__c = assetId.Id;
-            diagnosticTroubleInfoMap.put(assetId.VIN__c, diagnosticTroubleInfo);
-        }
-
+ 
+        List<Asset> assetList = [SELECT Id, VIN__c FROM Asset WHERE VIN__c IN :diagnosticTroubleInfoMap.keySet()];
+        for (Asset a : assetList) {
+                diagnosticTroubleInfo.Vehicle__c = a.Id;
+                diagnosticTroubleInfo.VIN__c = a.VIN__c;
+                diagnosticTroubleInfoMap.put(diagnosticTroubleInfo.VIN__c, diagnosticTroubleInfo);
+            }
 
         if (String.isBlank(responseInstance.response.payload.ErrorMsg)) {
-            List<Database.SaveResult> updateResults = Database.update(diagnosticTroubleInfoMap.values(), true);
+            List<Database.SaveResult> insertResults = Database.insert(diagnosticTroubleInfoMap.values(), true);
             responseInstance.response.payload.ResultCode = 'Z';
             responseInstance.response.payload.ErrorCode = ' ';
             responseInstance.response.payload.ErrorMsg = ' ';
