--- a/force-app/main/default/classes/TransactionController.cls
+++ b/force-app/main/default/classes/TransactionController.cls
@@ -1,18 +1,15 @@
 public with sharing class TransactionController {
     @AuraEnabled
-    public static void createTrans(Decimal UQuantity, Decimal CQuantity, Datetime TDate, string Status, string Description, string PInventory){
-        
-        Parts_Inventory_Transaction__c p = new Parts_Inventory_Transaction__c(
-
-            Updated_Quantity__c = UQuantity,
-            Confirmed_Quantity__c = CQuantity,
-            Transaction_Date__c = TDate,
-            Status__c = Status,
-            Description__c = Description,
-            Parts_Inventory__c = PInventory
-        );
-        insert p;
-
+    public static void createTrans(Parts_Inventory_Transaction__c trans){
+        try {
+            
+            insert trans;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
     }
 
 }
+
+
+// AuraHandleException 으로 try catch 사용
