--- a/force-app/main/default/classes/CXP_AMOS_PartsMaster_API.cls
+++ b/force-app/main/default/classes/CXP_AMOS_PartsMaster_API.cls
@@ -1,15 +1,17 @@
+
 @RestResource(urlMapping='/CXP_AMOS_PartsMaster/*')
 global with sharing class CXP_AMOS_PartsMaster_API {
     @HttpPost
-    global static void insertParts() {
-        RestRequest request = RestContext.request;
+    global static void partsInsert() {
+        RestRequest  request = RestContext.request;
         RestResponse response = RestContext.response;
-        Schema.SObjectField externalId = Product2.Fields.External_Key__c;
+
         CXP_AMOS_PartsMaster_APIWrapper bodyWrapper = CXP_AMOS_PartsMaster_APIWrapper.parse(request.requestBody.toString());
         CXP_AMOS_PartsMaster_APIWrapper.Response responseInstance = new CXP_AMOS_PartsMaster_APIWrapper.Response(
             bodyWrapper.request.header.ifTrackingId
         );
 
+        Schema.SObjectField externalId = Product2.Fields.External_Key__c;
         Map<String, Id> departmentCodeMap = new Map<String, Id>();
         List<Department__c> departmentList = [
             SELECT Id, Department_Code__c
@@ -17,18 +19,18 @@ global with sharing class CXP_AMOS_PartsMaster_API {
             WHERE RecordType.Name = 'NSC Department'
         ];
         for (Department__c department : departmentList) {
-            departmentCodeMap.put(department.Department_Code__c, department.id);
+            departmentCodeMap.put(department.Department_Code__c, department.Id);
         }
 
         Map<String, Product2> productMap = new Map<String, Product2>();
         for (CXP_AMOS_PartsMaster_APIWrapper.T_DATA bodyItem : bodyWrapper.request.payload.T_DATA) {
             Product2 product = new Product2();
             if (String.isBlank(bodyItem.AMOSProductCode)) {
-                populateResponseErrorMessage(responseInstance, 'E', ' ', 'Product Code is empty');
+                populateResponseErrorMessage(responseInstance, 'E', ' ', 'VIN value is empty');
                 break;
             }
             product.Name = bodyItem.AMOSPartName;
-            product.AMOSCompanyKindCode__c = bodyItem.AMOSCompanyKindCode;
+            product.AMOSCompanyKindCode__c	= bodyItem.AMOSCompanyKindCode;
             product.AMOSProductCode__c = bodyItem.AMOSProductCode;
             product.AMOSPartNameNative__c = bodyItem.AMOSPartNameNative;
             product.AMOSPartName__c = bodyItem.AMOSPartName;
@@ -49,7 +51,7 @@ global with sharing class CXP_AMOS_PartsMaster_API {
             product.MSRP__c = bodyItem.ProductPriceMSRP;
             product.ProductDealerPriceVOR__c = bodyItem.ProductDealerPriceVOR;
             product.ProductDealerPriceDLY__c = bodyItem.ProductDealerPriceDLY;
-            product.ProductDealerPriceSTK__c = bodyItem.ProductDealerPriceStk;
+            product.ProductDealerPriceStk__c = bodyItem.ProductDealerPriceStk;
             product.AMOSDiscountGroup__c = bodyItem.AMOSDiscountGroup;
             product.ProductDiscountRateVOR__c = bodyItem.ProductDiscountRateVOR;
             product.ProductDiscountRateDLY__c = bodyItem.ProductDiscountRateDLY;
@@ -97,3 +99,4 @@ global with sharing class CXP_AMOS_PartsMaster_API {
         response.response.payload.ErrorMsg = errorMsg;
     }
 }
+//
