--- a/force-app/main/default/classes/TransactionController.cls
+++ b/force-app/main/default/classes/TransactionController.cls
@@ -1,11 +1,11 @@
 public with sharing class TransactionController {
     @AuraEnabled
     public static void createTrans(Parts_Inventory_Transaction__c trans){
+        String errorMessage;
         try {
-            
             insert trans;
         } catch (Exception e) {
-            throw new AuraHandledException(e.getMessage());
+           throw new AuraHandledException(e.getMessage());
         }
     }
 
